Fix flag valign.

--- a/public/LESS_FILES/overrides.less
+++ b/public/LESS_FILES/overrides.less
@@ -216,6 +216,10 @@ h2 small {
 
 .header-dropdown-list > li > .dropdown-toggle {
     margin-top: 10px;
+
+    img {
+        vertical-align: initial;
+    }
 }
 
 .smart-style-2 {
